# Messenger

./: CMakeLists.txt
client/: CMakeLists.txt
client/src/: client.cpp  client.hpp  main.cpp
client/src/network/: network_client.cpp  network_client.hpp
client/src/ui/: client_widget.cpp  client_widget.hpp
server/: CMakeLists.txt
server/src/: main.cpp  server.cpp  server.hpp
tests/: CmakeLists.txt
tests/client_test_src/: client_test.cpp  client_test.hpp  main.cpp  testable_client.cpp  testable_client.hpp
tests/server_test_src/: main.cpp  server_test.cpp  server_test.hpp
